hq sandbox - latest/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Call_Result__c</fullName>
        <label>Call Result (Apto)</label>
        <picklist>
            <picklistValues>
                <fullName>Busy Signal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Close_Task__c</fullName>
        <formula>Date_Closed__c -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Close Task</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Guid__c</fullName>
        <description>Unique ID for HubSpot related Tasks</description>
        <label>Guid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Comments__c</fullName>
        <description>A field to store a short summary of the conversation had to quick viewing.</description>
        <inlineHelpText>A field to store a short summary of the conversation had to quick viewing.</inlineHelpText>
        <label>Short Comments</label>
        <type>TextArea</type>
    </fields>
</CustomObject>